--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,10 @@
         </activity>
         <activity android:name="com.example.wishwash.ResultActivity">
         </activity>
+        <meta-data
+            android:name="com.naver.maps.map.CLIENT_ID"
+            android:value="pppo35lowg"
+            />
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
