--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha12'
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
