--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,14 +38,14 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/raw'] } }
-    /*kotlinOptions {
+    kotlinOptions {
         jvmTarget = '1.8'
-    }*/
+    }
 }
 
 dependencies {
 
-    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -65,51 +65,55 @@ dependencies {
     implementation 'com.naver.maps:map-sdk:3.17.0'
 
     implementation 'com.google.firebase:firebase-analytics'
-    //implementation 'com.kakao.sdk:v2-map:1.4.2@aar'
-    //implementation 'net.daum.mf:map-sdk:4.5.0'
+
+
+
+
 
     // " 기본 제공 이미지 모델링 "
-    //implementation 'com.google.mlkit:image-labeling:17.0.7'
     // " 커스텀 모델 "
     implementation 'com.google.mlkit:image-labeling-custom:17.0.1'
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.mlkit:linkfirebase:17.0.0'
-    //implementation 'com.google.firebase:firebase-ml-vision-object-detection-model:20.1.3'
-    //implementation 'com.google.firebase:firebase-ml-custom:22.0.0'
+
     implementation 'com.google.firebase:firebase-ml-common:22.1.2'
     implementation 'com.google.firebase:firebase-ml-modeldownloader'
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:20.0.2'
-    // implementation 'com.google.firebase:firebase-ml-model-interpreter:22.0.4'
+
     implementation 'org.tensorflow:tensorflow-lite:2.6.0'
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
     implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
     implementation 'com.google.android.gms:play-services-vision-image-labeling-internal:16.1.0'
-    implementation 'com.google.mlkit:image-labeling-default-common:17.0.0'
+    implementation 'com.google.android.gms:play-services-mlkit-image-labeling-custom'
 
 
 
-    // def camerax_version = "1.3.0-alpha05"
-    // The following line is optional, as the core library is included indirectly by camera-camera2
+
 
     implementation 'androidx.camera:camera-core:1.2.3'
     implementation "androidx.camera:camera-camera2:1.2.3"
-    // If you want to additionally use the CameraX Lifecycle library
+    implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.12.1'
+//    implementation 'android.graphics:bitmap-ktx:1..0'
+
     implementation "androidx.camera:camera-lifecycle:1.2.3"
-    // If you want to additionally use the CameraX View class
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation "androidx.camera:camera-view:1.2.3"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    //implementation 'com.google.firebase:firebase-model-downloader:29.0.0'
-    //noinspection OutdatedLibrary
-    implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
-
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     testImplementation 'junit:junit:4.13.2'
+
+
+
+
     implementation fileTree(dir: 'src\\main\\jniLibs', include: ['*.aar', '*.jar'], exclude: [])
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test:runner:1.5.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
 
 
 
