--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,18 @@ buildscript{
     dependencies{
         classpath 'com.google.gms:google-services:4.3.15'
     }
+    repositories {
+        google()
+    }
 }
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+}
+
+repositories {
+//    google()
+//    mavenCentral()
 }
 
