--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,13 +72,14 @@ dependencies {
 
     // " 기본 제공 이미지 모델링 "
     // " 커스텀 모델 "
+    implementation 'com.google.mlkit:image-labeling-custom:17.0.1'
 
-
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.google.mlkit:linkfirebase:17.0.0'
 
-
-
+    implementation 'com.google.firebase:firebase-ml-common:22.1.2'
+    implementation 'com.google.firebase:firebase-ml-modeldownloader'
+    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:20.0.2'
 
     implementation 'org.tensorflow:tensorflow-lite:2.6.0'
     implementation 'com.google.firebase:firebase-core:21.1.1'
@@ -86,32 +87,26 @@ dependencies {
     implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
     implementation 'com.google.android.gms:play-services-vision-image-labeling-internal:16.1.0'
 
+    implementation 'org.tensorflow:tensorflow-lite-support:0.2.0'
 
 
 
 
 
-    // https://mvnrepository.com/artifact/com.microsoft.onnxruntime/onnxruntime-android
+    implementation 'androidx.camera:camera-core:1.2.3'
+    implementation "androidx.camera:camera-camera2:1.2.3"
     implementation 'com.microsoft.onnxruntime:onnxruntime-android:1.12.1'
+//    implementation 'android.graphics:bitmap-ktx:1..0'
 
-    // CameraX core library using the camera2 implementation
-    def camerax_version = "1.3.0-alpha05"
-    // The following line is optional, as the core library is included indirectly by camera-camera2
-    implementation "androidx.camera:camera-core:${camerax_version}"
-    implementation "androidx.camera:camera-camera2:${camerax_version}"
-    // If you want to additionally use the CameraX Lifecycle library
-    implementation("androidx.camera:camera-lifecycle:${camerax_version}")
-    // If you want to additionally use the CameraX View class
-    implementation("androidx.camera:camera-view:${camerax_version}")
-
-
+    implementation "androidx.camera:camera-lifecycle:1.2.3"
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation "androidx.camera:camera-view:1.2.3"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation 'junit:junit:4.13.2'
 
 
 
