--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
     }
     aaptOptions {
-        noCompress "tflite"
+//        noCompress "tflite"
         // or noCompress "lite"
     }
 
@@ -70,24 +70,17 @@ dependencies {
 
 
 
-    // " 기본 제공 이미지 모델링 "
-    // " 커스텀 모델 "
-    implementation 'com.google.mlkit:image-labeling-custom:17.0.1'
+
 
     implementation 'com.google.code.gson:gson:2.8.9'
-    implementation 'com.google.mlkit:linkfirebase:17.0.0'
 
-    implementation 'com.google.firebase:firebase-ml-common:22.1.2'
-    implementation 'com.google.firebase:firebase-ml-modeldownloader'
-    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:20.0.2'
 
-    implementation 'org.tensorflow:tensorflow-lite:2.6.0'
+
+
+
     implementation 'com.google.firebase:firebase-core:21.1.1'
-    implementation 'com.google.android.gms:play-services-vision:20.1.3'
-    implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
-    implementation 'com.google.android.gms:play-services-vision-image-labeling-internal:16.1.0'
 
-    implementation 'org.tensorflow:tensorflow-lite-support:0.2.0'
+
 
 
 
